2005-06-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* supportw.c: HeapDestroy.
	* Makefile.am: don't build supportw on windows.

2005-06-29  Ben Maurer  <bmaurer@ximian.com>

	* Makefile.am: namespace our library.

2005-06-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* supportw.c:
	* supportw.h:
	* Makefile.am: new library intended to provide often P/Invoked windows
	API functions not present in io-layer.

2005-06-29  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Handle Syslog-related changes (SyslogFacility isn't a 
	  [Flags] enum); make-map.exe changes.

2005-06-28  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c, map.h: Handle Syslog-related changes (SyslogLevel isn't a [Flags]
	  enum; change in order between LOG_USER and LOG_USRE).

2005-06-27  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c, map.h: Add corrected spelling of LOG_USER.

2005-06-13  Miguel de Icaza  <miguel@novell.com>

	*  sys-statvfs.c (copy_statfs): f_flags is the field name on BSD,
	not f_flag. 

2005-06-08  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Create an unversioned library.  We won't make any gaurantees
	  about ABI stability until Mono 1.2 (if then).

2005-06-07  Jonathan Pryor  <jonpryor@vt.edu>

	* sys-mman.c: Check for presence of mremap and remap_file_pages.

2005-06-05  Jonathan Pryor  <jonpryor@vt.edu>

	* map-icalls.h, map.h: Change header comment so it matches what 
	  `make refresh` generates.
	* map.c: Add <sys/xattr.h> header.

2005-05-31  Jonathan Pryor  <jonpryor@vt.edu>

	* sys-mman.c: Add wrappers for mmap, munmap, mprotect, msync, mlock,
	  munlock, mremap, mincore, remap_file_pages.
	* map-icalls.h: Update to latest shared interface.
	* map.c, map.h: Add {To,From} pairs for MmapFlags, MmapProt, MsyncFlags,
	  MlockallFlags, MremapFlags.
	* mph.h: Add mph_return_*_if_ssize_t_overflow macros.

2005-05-31  Jonathan Pryor  <jonpryor@vt.edu>

	* unistd.c: Oops -- deal with s/LockFlags/LockfCommand/ change.

2005-05-31  Jonathan Pryor  <jonpryor@vt.edu>
